--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Rare Watermelon Shop</title>
+  <title>Sign Up Confirmation</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
       background-size: 100px 100px;
     }
 
-    .contact-form {
+    .confirmation-message {
       max-width: 400px;
       margin: auto;
       background-color: #ffffff;
@@ -52,10 +52,6 @@
       padding: 20px;
       margin-top: 20px;
       text-align: center;
-    }
-
-    .form-input {
-      margin-bottom: 15px;
     }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -85,44 +81,23 @@
   </div>
 
   <div class="container mt-5">
-    <div class="contact-form">
-      <h2>Contact Us By Filling out the Information Below</h2>
-      <form action="/confirmation">
-        <div class="mb-3 mt-3">
-          <label for="name">Name:</label>
-          <input type="text" class="form-control form-input" id="name" placeholder="Enter Name" name="name">
-        </div>
-        <div class="mb-3 mt-3">
-          <label for="email">Email:</label>
-          <input type="text" class="form-control form-input" id="email" placeholder="Enter email" name="email">
-        </div>
-        <div class="mb-3">
-          <label for="phn">Phone-number:</label>
-          <input type="password" class="form-control form-input" id="phn" placeholder="Enter Phone Number" name="phn">
-        </div>
-        <div class="mb-3 mt-3">
-          <label for="BA">Billing Address:</label>
-          <input type="text" class="form-control form-input" id="BA" placeholder="Enter Billing Address" name="add">
-        </div>
-        <div class="mb-3">
-          <label for="city">City:</label>
-          <input type="text" class="form-control form-input" id="city" placeholder="Enter city" name="city">
-        </div>
-        <div class="mb-3">
-          <label for="state">State:</label>
-          <input type="text" class="form-control form-input" id="state" placeholder="Enter state" name="state">
-        </div>
-        <div class="mb-1 mt-1">
-          <label for="ZC">Zip Code:</label>
-          <input type="text" class="form-control form-input" id="ZC" placeholder="Enter zip code" name="zip">
-        </div>
-        <div class="mb-1">
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox" name="remember"> Remember me
-          </label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+    <div class="confirmation-message">
+      <h2>Congratulations, You've Successfully Signed Up!</h2>
+      <p>name: {{data.name}}
+      <br />
+      email: {{data.email}}
+      <br />
+        phone number: {{data.phone}}
+      <br />
+        address: {{data.address}}
+      <br />
+         city: {{data.city}}
+        <br />
+         state: {{data.state}}
+        <br />
+         zip code: {{data.zip}}
+
+      </p>
     </div>
   </div>
 
